k8s/eks/patch-storageclass.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: musicstore-postgres
  namespace: musicstore
spec:
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        storageClassName: gp3
